# Decentralized-Self-Healing-Edge-Server-Framework--D-SEF-

./: .gitignore  README_packaging.md  Readme.md  cert.pem  esp_sim_results.csv  key.pem  pyinstaller.spec  pyproject.toml  requirements.txt  run_all_servers.py
edge_server/: accounting.py  auth.py  chord.py  documentation.html  esp_handler.py  executor.py  main.py  offer_manager.py  peers.py  resource_manager.py  scheduler.py  task_manager.py  visualizer.py
edge_server/static/: esp_results_analysis.js
edge_server/templates/: esp_results.html  visualizer.html
esp_simulator/: esp_simulator.py
