[project]
name = "decentralized-self-healing-edge-server-framework"
version = "0.1.0"
dependencies = [
    "flask",
    "requests",
    "pycryptodome",
    "psutil",
    "docker",
    "flask-limiter",
    "pyinstaller",
    "pyinstaller-hooks-contrib",
    "pywin32",
    "pywin32-ctypes"
]

[tool.uv]
# This section can be expanded with uv-specific options if needed
